--- a/active.tex
+++ b/active.tex
@@ -9,33 +9,30 @@
 	\begin{questions}
 		\raggedcolumns\begin{multicols}{2}
 			\question Ar fizika yra geriausias dalykas? \begin{choices}
-				\choice IIIIIIIIIIIIIIIIIIIIIIII \newline
-				IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII \newline
-				IIIIIIIIII
-				\choice ne
-				\choice nzn
-				\choice as triohala
+				\choice 
+				\choice 
+				\choice 
+				\choice 
 			\end{choices}
 			\question Ar as adekvatus? \begin{choices}
-				\choice taip
-				\choice ne \newline \newline \newline haha
-				\choice maybe
-				\choice it is what it is
+				\choice 
+				\choice 
+				\choice 
+				\choice 
 			\end{choices}
 			\question Ar as adekvatus? \begin{choices}
-				\choice taip \newline ne \newline taip
-				\choice ne
-				\choice maybe
-				\choice it is what it is
+				\choice 
+				\choice 
+				\choice 
+				\choice 
 			\end{choices}
 			\question Ar as adekvatus? \begin{choices}
-				\choice taip
-				\choice ne
-				\choice maybe
-				\choice it is what it is
+				\choice 
+				\choice 
+				\choice 
+				\choice
 			\end{choices}
 		\end{multicols}
-		\question Kiek tau metu?
 	\end{questions}
 %END
 	
