--- a/multiple_choice/multiple_choice.tex
+++ b/multiple_choice/multiple_choice.tex
@@ -1,16 +1,37 @@
 \documentclass{exam}
+\usepackage{amsmath}
+\usepackage{enumitem}
+\usepackage{multicol}
 
 \begin{document}
-	
-	\begin{center}
-		\fbox{\fbox{\parbox{5.5in}{\centering
-					Answer the questions in the spaces provided. If you run out of room
-					for an answer, continue on the back of the page.}}}
-	\end{center}
-	
-	\begin{center}
-		\begin{questions}
-			\question kak dela?
-		\end{questions}
-	\end{center}
+
+\begin{questions}
+\raggedcolumns\begin{multicols}{2}
+	\question Ar fizika yra geriausias dalykas? \begin{choices}
+		\choice 
+		\choice 
+		\choice 
+		\choice 
+	\end{choices}
+	\question Ar as adekvatus? \begin{choices}
+		\choice 
+		\choice 
+		\choice 
+		\choice 
+	\end{choices}
+	\question Ar as adekvatus? \begin{choices}
+		\choice 
+		\choice 
+		\choice 
+		\choice 
+	\end{choices}
+	\question Ar as adekvatus? \begin{choices}
+		\choice 
+		\choice 
+		\choice 
+		\choice
+	\end{choices}
+\end{multicols}
+\end{questions}
+
 \end{document}
