Coomit is laptopo

--- a/test_creator_script/template.tex
+++ b/test_creator_script/template.tex
@@ -1,9 +1,13 @@
 \documentclass{exam}
+\usepackage{amsmath}
+\usepackage{enumitem}
+\usepackage{multicol}
 
 \begin{document}
 
 	\begin{center}
 		\fbox{\fbox{\parbox{5.5in}{\centering
+				%TITLE%
 				}}}
 	\end{center}
 	
