--- a/test_creator_script/insert/insert6_8.tex
+++ b/test_creator_script/insert/insert6_8.tex
@@ -1,1 +1,1 @@
-\question fotonas gali įgreitinti išlaisvintus \fillin[elektronus].
+\question Fotonas gali įgreitinti išlaisvintus \fillin[elektronus].
