--- a/test_creator_script/insert/insert6_9.tex
+++ b/test_creator_script/insert/insert6_9.tex
@@ -1,1 +1,1 @@
-\question vykstant \fillin[beta] skylimu, branduolio protonų skaičius padidėja 1.
+\question Vykstant \fillin[beta] skylimu, branduolio protonų skaičius padidėja 1.
