--- a/test_creator_script/testiniai/testinis6_3.tex
+++ b/test_creator_script/testiniai/testinis6_3.tex
@@ -1,6 +1,6 @@
 \question Nuo ko priklauso fotono energija? \begin{choices}
     \choice Dažnio
     \choice Greičio
-    \choice masės
-    \choice krūvio
+    \choice Masės
+    \choice Krūvio
 \end{choices}
