--- a/test_creator_script/trial/trial_test.tex
+++ b/test_creator_script/trial/trial_test.tex
@@ -21,11 +21,23 @@ prašome vertinti, gerbti ir mylėti
 
 	\begin{questions}
 	\raggedcolumns\begin{multicols}             {2} 
-\question Kas yra šviesos dalelė? \begin{choices}
-	\choice Protonas.
-	\choice Fotonas.
-	\choice Elektronas.
-	\choice Gama.
+\question Kiek nukleno sumažėja branduolyje vykstant alfa skilimui? \begin{choices}
+    \choice 1
+    \choice 0
+    \choice 4
+    \choice 3
+\end{choices}
+\question Iš kur atsiranda saulės skleidžiama energija? \begin{choices}
+    \choice Vykstant degimui.
+    \choice Vykstant branduolių dalijimuisi.
+    \choice Vykstant branduolių jungimuisi.
+    \choice Vykstant grandininei branduolinei reakcijai.
+\end{choices}
+\question Kokia radioaktyvi spinduliuotė pasižymi didžiausia skvarba? \begin{choices}
+    \choice Gama spinduliuotė.
+    \choice Alfa spinduliuotė.
+    \choice Beta spinduliuotė.
+    \choice Radijo bangos.
 \end{choices}
 \question Kokia yra fotono rimties masė? \begin{choices}
     \choice Tokia kaip elektrono.
@@ -33,27 +45,53 @@ prašome vertinti, gerbti ir mylėti
     \choice Begalinė.
     \choice 0.
 \end{choices}
-\question Kokių dalelių turi vienoda kiekį izotopai? \begin{choices}
-    \choice Fotonų.
-    \choice Neutronų.
-    \choice Protonų.
-    \choice Nukleonų.
-\end{choices}
-\question Energija, kurios reikia kad išlaisvinti elektroną iš metalo: \begin{choices}
-    \choice Išlaisvinimo darbas.
-    \choice Išlaisvinimo galia.
-    \choice Elektrostatinė energija.
-    \choice Branduolinė energija.
-\end{choices}
 \end{multicols} 
 
-	\question \fillin[J] yra energijos matavimo vienetas.
-\question \fillin[h] yra žymima Planko konstanta.
-\question fotonas gali įgreitinti išlaisvintus \fillin[elektronus].
-\question \fillin[protonas] - teigiamai įelektrintas nukleonas.
+	\question \fillin[Fotoefektas] yra reiškinys, kai fotonas išmuša elektronus iš metalo.
+\question \fillin[Hz] yra dažnio matavimo vienetas.
+\question Vykstant \fillin[beta] skylimu, branduolio protonų skaičius padidėja 1.
+\question \fillin[J] yra energijos matavimo vienetas.
 
-	%Q2%
-	%Q3%
+	\raggedcolumns\begin{multicols}             {2} 
+\begin{center}
+        \begin{tabular}{ |c|c|c| } 
+        \hline 
+metalai & energija \\ 
+ \hline Li & 2.9 \\ 
+ \hline Na & 2.4 \\ 
+ \hline K & 2.3 \\ 
+ \hline Cs & 1.9 \\ 
+ \hline Ba & 2.5 \\ 
+ \hline Ca & 2.9 \\ 
+ \hline Nb & 2.3 \\ 
+ \hline Zr & 4.05 \\ 
+ \hline Mg & 3.66 \\ 
+ \hline Al & 4.2 \\ 
+ \hline Cu & 4.6 \\ 
+ \hline Ag & 4.64 \\ 
+ \hline Zn & 3.6 \\ 
+ \hline Sc & 3.5 \\ 
+ \hline  
+ \end{tabular} 
+ \end{center} 
+\begin{center}
+        \begin{tabular}{ |c|c|c| } 
+        \hline 
+fotonai & energija \\ 
+ \hline raudonos & 1.91 \\ 
+ \hline oranžinės & 2.06 \\ 
+ \hline geltonos & 2.14 \\ 
+ \hline žalios & 2.25 \\ 
+ \hline žydros & 2.48 \\ 
+ \hline mėlynos & 2.75 \\ 
+ \hline violetinės & 3.1 \\ 
+ \hline  
+ \end{tabular} 
+ \end{center} 
+\end{multicols} 
+
+	\question Į Na metalo plokštelę yra šviečiama žydros spalvos šviesa. Ar įvyks fotoefektas? Jei taip, kokia bus elektronų kinetinė energija?
+
 	%Q4%
 	%Q5%
 	%Q6%
