--- a/test_creator_script/insert/insert6_10.tex
+++ b/test_creator_script/insert/insert6_10.tex
@@ -1,1 +1,1 @@
-\question vystant \fillin[alfa] skylimui yra išspinduliuojami helio branduoliai.
+\question Vystant \fillin[alfa] skylimui yra išspinduliuojami helio branduoliai.
