Po parengimo 2a klasei

--- a/test_creator_script/testiniai/testinis6_6.tex
+++ b/test_creator_script/testiniai/testinis6_6.tex
@@ -1,4 +1,4 @@
-\question Kiek nukleno sumažėja branduolyje vykstant alfa skilimui? \begin{choices}
+\question Keliais nukleinais sumažėja branduolyje vykstant alfa skilimui? \begin{choices}
     \choice 1
     \choice 0
     \choice 4
