--- a/test_creator_script/trecia/trecia_6.tex
+++ b/test_creator_script/trecia/trecia_6.tex
@@ -1,1 +1,1 @@
-\question Į Li metalo plokštelę yra šviečiama žalios spalvos šviesa. Ar įvyks fotoefektas? Jei taip, kokia bus elektronų kinetinė energija?
+\question Į Cs metalo plokštelę yra šviečiama žalios spalvos šviesa. Ar įvyks fotoefektas? Jei taip, kokia bus elektronų kinetinė energija?
