--- a/test_creator_script/trecia/trecia_10.tex
+++ b/test_creator_script/trecia/trecia_10.tex
@@ -1,1 +1,1 @@
-\question Į Na metalo plokštelę yra šviečiama mėlynos spalvos šviesa. Ar įvyks fotoefektas? Jei taip, kokia bus elektronų kinetinė energija?
+\question Į Li metalo plokštelę yra šviečiama violetinės spalvos šviesa. Ar įvyks fotoefektas? Jei taip, kokia bus elektronų kinetinė energija?
