--- a/test_creator_script/trecia/trecia_11.tex
+++ b/test_creator_script/trecia/trecia_11.tex
@@ -1,1 +1,1 @@
-\question Į Ca metalo plokštelę yra šviečiama žalios spalvos šviesa. Ar įvyks fotoefektas? Jei taip, kokia bus elektronų kinetinė energija?
+\question Į Zr metalo plokštelę yra šviečiama žalios spalvos šviesa. Ar įvyks fotoefektas? Jei taip, kokia bus elektronų kinetinė energija?
