--- a/test_creator_script/trecia/trecia_3.tex
+++ b/test_creator_script/trecia/trecia_3.tex
@@ -1,1 +1,1 @@
-\question Į Li metalo plokštelę yra šviečiama žalios spalvos šviesa. Ar įvyks fotoefektas? Jei taip, kokia bus elektronų kinetinė energija?
+\question Į Nb metalo plokštelę yra šviečiama mėlynos spalvos šviesa. Ar įvyks fotoefektas? Jei taip, kokia bus elektronų kinetinė energija?
