--- a/test_creator_script/trecia/trecia_5.tex
+++ b/test_creator_script/trecia/trecia_5.tex
@@ -1,1 +1,1 @@
-\question Į Cs metalo plokštelę yra šviečiama žalios spalvos šviesa. Ar įvyks fotoefektas? Jei taip, kokia bus elektronų kinetinė energija?
+\question Į Ca metalo plokštelę yra šviečiama žydros spalvos šviesa. Ar įvyks fotoefektas? Jei taip, kokia bus elektronų kinetinė energija?
