--- a/test_creator_script/trecia/trecia_7.tex
+++ b/test_creator_script/trecia/trecia_7.tex
@@ -1,1 +1,1 @@
-\question Į Zr metalo plokštelę yra šviečiama žydros spalvos šviesa. Ar įvyks fotoefektas? Jei taip, kokia bus elektronų kinetinė energija?
+\question Į Nb metalo plokštelę yra šviečiama žalios spalvos šviesa. Ar įvyks fotoefektas? Jei taip, kokia bus elektronų kinetinė energija?
