--- a/test_creator_script/trecia/trecia_8.tex
+++ b/test_creator_script/trecia/trecia_8.tex
@@ -1,1 +1,1 @@
-\question Į Na metalo plokštelę yra šviečiama violetinės spalvos šviesa. Ar įvyks fotoefektas? Jei taip, kokia bus elektronų kinetinė energija?
+\question Į Na metalo plokštelę yra šviečiama žalios spalvos šviesa. Ar įvyks fotoefektas? Jei taip, kokia bus elektronų kinetinė energija?
