--- a/test_creator_script/trecia/trecia_9.tex
+++ b/test_creator_script/trecia/trecia_9.tex
@@ -1,1 +1,1 @@
-\question Į Ca metalo plokštelę yra šviečiama mėlynos spalvos šviesa. Ar įvyks fotoefektas? Jei taip, kokia bus elektronų kinetinė energija?
+\question Į Cs metalo plokštelę yra šviečiama žydros spalvos šviesa. Ar įvyks fotoefektas? Jei taip, kokia bus elektronų kinetinė energija?
